log
Tue 26 Mar 2024 08:47:48 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c:82:7: error: redefinition of ‘createList’
   82 | List *createList() {
      |       ^~~~~~~~~~
list.c:31:8: note: previous definition of ‘createList’ with type ‘List *(void)’ {aka ‘struct List *(void)’}
   31 | List * createList() {
      |        ^~~~~~~~~~
Compilation failed
6e22992
Tue 26 Mar 2024 08:48:15 PM UTC: 
 list.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  1|5
total_score: 10/70
a55db85
Tue 26 Mar 2024 08:52:10 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 25/70
9ec84d2
Tue 26 Mar 2024 09:03:09 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
9076509
Tue 26 Mar 2024 09:12:09 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
fe5bc40
Tue 26 Mar 2024 09:19:17 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
a95c97f
Tue 26 Mar 2024 10:28:23 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7e8d9b1
Tue 26 Mar 2024 10:36:07 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
485c093
